--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="star">Star</string>
     <string name="fork">Fork</string>
     <string name="date">Repository created on: </string>
+    <string name="delete_all">Delete all</string>
 </resources>
